updated authMiddleware.js, Yaml files and server.js
